helm/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-oi
  namespace: test 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  rules:
    - host: api.meatheadmathematician.com
      http:
        paths:
          - path: /oi(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: open-webui          # service created by the chart
                port:
                  name: http               # chart exposes port name "http"
